--- a/app5.json
+++ b/app5.json
@@ -1,5 +1,5 @@
 {
-    "apiUrl" : "https://flixverse.site/FlixVerse/apiakvb/public_html/api/",
+    "apiUrl" : "https://app.mflixtv.xyz/api/",
     "pushUpdate" : "off",
     "newPackage" : "",
     "NetworkAds" : "x"
